--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,24 +2,38 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "cicd" ]
   pull_request:
     branches: [ "main" ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
+  build_linux:
+  
+    runs-on: ubuntu-latest       
 
     steps:
     - uses: actions/checkout@v3
-    #- name: configure
-    #  run: ./configure
-    #- name: make
-    #  run: make
-    #- name: make check
-    #  run: make check
-    #- name: make distcheck
-    #  run: make distcheck
+    - name: compile
+      run: cd src && gcc -o wav2tzx wav2tzx.c
+
+  build_win32:
+  
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up MinGW
+      uses: egor-tensin/setup-mingw@v2
+      with:
+        platform: x64
+    - name: compile
+      run: cd src && gcc -o wav2tzx wav2tzx.c
+
+  build_macosx_intel:
+  
+    runs-on: macos-latest
+    
+    steps:
+    - uses: actions/checkout@v3
     - name: compile
       run: cd src && gcc -o wav2tzx wav2tzx.c
